fixed alignment in timeline table

--- a/src/components/Timeline/timelineA.css
+++ b/src/components/Timeline/timelineA.css
@@ -25,7 +25,8 @@ table th {
 table td {
   border: 1px solid #ffffff;
   text-align: center;
-  padding: 15px 30px;
+  padding: 15px 20px;
+
   /* background: #9e9e9e; */
   color: #ffffff;
 }
